# pocket-family

./: .env.aws.production.example  .env.example  .env.production.example  .gitignore  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  Dockerfile.backend.dev  Dockerfile.devcontainer  Dockerfile.frontend.dev  LICENSE  MILESTONE_1_TEST_SUMMARY.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yaml  package-lock.json  package.json  pytest.ini
.active_context/: frontend_roadmap.md  frontend_test_result.txt  sprint_2_open_items.md  sprint_3.md  sprint_4.md
.claude/: instructions.md  settings.json  settings.local.json
.claude/agents/: backend-dev.md  backend-test.md  code-reviewer.md  documentation-writer.md  frontend-dev.md  frontend-test.md  refactor.md
.claude/commands/: document-changes.md  orchestrate.md
.claude/tasks/: fix-failing-tests.md  sprint3-milestone0-backend.md  sprint3-milestone1-accounts-page.md  sprint3-milestone2-crud.md  sprint3-milestone3-testing-polish.md  sprint3-milestone4-global.md  sprint3-milestone5-sharing.md  sprint3_milestone2-crud-open-items.md
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.memory_bank/: components_used.md  system_architecture.md
aws/: ecs-task-definition.json
backend/: CLAUDE.md  pyproject.toml  requirements.txt
backend/api/: Dockerfile  alembic.ini  query_accounts_temp.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 3c1d269eb073_account_delete_should_cascade_to_.py  6b2f8a4f4f4b_tenant_fk_cascade.py  a1b2c3d4e5f6_add_budget_and_budget_category_tables.py  aa11bb22cc33_add_refresh_token_family_id.py  b3c4d5e6f7a8_add_currency_support.py  b7c8d9e0f1a2_add_language_to_user.py  bb22cc33dd44_add_transaction_composite_indexes.py  c7f9d2e4a1b3_add_importjob_table.py  d1e2f3a4b5c6_add_icon_color_to_category.py  e2f3a4b5c6d7_add_icon_color_to_account.py  f3a4b5c6d7e8_add_icon_color_to_budget.py
backend/api/app/: auth.py  celery_client.py  db.py  deps.py  main.py  models.py  rate_limit.py  schemas.py  seed_defaults.py
backend/api/app/routers/: __init__.py  accounts.py  auth.py  budgets.py  categories.py  exchange_rates.py  imports.py  tenants.py  transactions.py  users.py
backend/api/app/services/: __init__.py  accounts.py  auth.py  budgets.py  categories.py  imports.py  tenants.py  transactions.py  users.py
backend/api/app/storage/: __init__.py  base.py  local.py  s3.py
backend/api/tests/: conftest.py  helpers.py  test_account_crud.py  test_account_idor.py  test_account_share_crud.py  test_accounts_endpoints.py  test_auth_endpoints.py  test_budget_endpoints.py  test_category_crud.py  test_deps_context.py  test_imports_endpoints.py  test_imports_helpers.py  test_imports_storage.py  test_imports_storage_s3.py  test_membership_crud.py  test_rate_limit.py  test_refresh_token_reuse.py  test_seed_defaults.py  test_tenant_crud.py  test_transaction_crud.py  test_transaction_hardening.py  test_users.py
backend/scripts/: backup_db_after_restart.sh  ensure_demo_user.py  recreate_db.py  seed_demo_data.py  seed_test_data.py
docs/: Diagram.plantuml  ERD.plantuml  SystemArchitecture.md  aws_hosting_plan.md  aws_lambda.md  csv-import-plan.md  feature-report-plan.md  glossary.md  north_star.md  openAPI_spec.json  pull_request_summary_sprint3.md  repo-structure.md  requirements.md  requirements.yaml
docs/.obsidian/: workspace.json
docs/Inbox/: Celery.md  Celery_Deep_Dive.md  Quick fixes.md  Recharts.md  Redis.md  redis_deep_dive.md  redis_quick_reference.md
docs/Pull Requests/: ALB_Hardening_Release.md  AWS_Ready_Release.md  CSV_Import_Service_Release.md  Demo_Ready_Release.md  Development_Branch_Release.md  Development_To_Master_Release.md  Documentation_Infrastructure_Enhancement.md  Frontend_Test_Refactor.md  Hardening_Phase2_Master_Release.md  Hardening_Phase2_Release.md  Hardening_Phase3_And_Cleanup_Release.md  Hardening_Phase3_Release.md  Hardening_Release.md  Icon_Color_Categories_Accounts_Budgets_PR.md  Import_Credit_Card_Classification_PR.md  Language_Selection_EN_PTBR_PR.md  Mobile_Ready_Release.md  Monthly_Reports_Release.md  Public_Repository_Release.md  QCSD_Security_Hardening_Release.md  Services_Layer_And_Hardening_Complete_Release.md  Sprint_3_Release.md  Sprint_4_Complete_Release.md  Sprint_4_Phase_1_Release.md  Sprint_5_Dashboard_Release.md  Sprint_7_Release.md  csv-import-lambda_PR.md
docs/active_context/: fronted_test_refactor_plan.md  frontend_roadmap.md  frontend_test_result.txt  sprint_3.md  sprint_4.md  sprint_4_feedback.md  sprint_4_milestone_1_summary.md  sprint_4_p2_feedback.md  sprint_5.md  sprint_6.md  sprint_7.md  sprint_8.md
docs/archive/: sprint_0.md  sprint_1.md  sprint_2.md
frontend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  nginx.aws.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
import-service/: CLAUDE.md  Dockerfile  Dockerfile.lambda  pyproject.toml
import-service/app/: celery_app.py  config.py  db.py  lambda_handler.py
import-service/app/storage/: __init__.py  base.py  local.py  s3.py
import-service/app/tasks/: celery_tasks.py  import_csv.py
import-service/tests/: __init__.py  conftest.py  test_celery_free_import.py  test_celery_task_retry_config.py  test_decode_sqs_record.py  test_process_import.py
infrastructure/: CLAUDE.md  README.md  build-and-push.sh  dev.sh  self-host.sh
tests/: conftest.py  helpers.py  test_account_share_crud.py  test_accounts_endpoints.py  test_auth_endpoints.py  test_category_crud.py  test_membership_crud.py  test_tenant_crud.py
(+358 files in other folders)
