[project]
name = "pocket-family-backend"
version = "0.1.0"
description = "Multi-tenant personal finance SaaS backend"
requires-python = ">=3.11"

dependencies = [
    # Core framework
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "pydantic[email]",

    # Database + ORM
    "sqlmodel==0.0.22",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",

    # Migrations
    "alembic==1.13.3",

    # Environment and config
    "python-dotenv==1.0.1",

    # Background tasks
    "celery==5.4.0",
    "redis==5.1.1",

    # Security & password hashing
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.27.2",
    "aiosqlite==0.20.0",

    # Linting & formatting
    "black==24.10.0",
    "isort==5.13.2",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["api/tests"]
asyncio_mode = "auto"
