[project]
name = "pocket-family-backend"
version = "0.1.0"
description = "Multi-tenant personal finance SaaS backend"
requires-python = ">=3.11"

dependencies = [
    # Core framework
    "fastapi==0.136.3",
    "uvicorn[standard]==0.30.6",
    "pydantic[email]",
    # Database + ORM
    "sqlmodel==0.0.22",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
    # Migrations
    "alembic==1.13.3",
    # Environment and config
    "python-dotenv==1.2.2",
    # Background tasks
    "celery==5.4.0",
    "redis==5.1.1",
    # Security & password hashing
    "passlib[argon2]==1.7.4",
    "PyJWT==2.13.0",
    "argon2-cffi",
    # AWS (lazy-imported only when DB_INSTANCE=aws_aurora_serverless)
    "boto3>=1.34.0",
    # Rate limiting (in-process; primarily to protect demo auth endpoints from abuse)
    "slowapi==0.1.9",
    # CSV import feature — date parsing and SQS queue support
    "python-dateutil>=2.9.0",
    "kombu[sqs]>=5.3.0",
    "python-multipart>=0.0.29",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.27.2",
    "aiosqlite==0.20.0",

    # Linting & formatting
    "black==24.10.0",
    "isort==5.13.2",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["api/tests"]
asyncio_mode = "auto"
