[project]
name = "pocket-family-import-service"
version = "0.1.0"
description = "Background CSV import worker for pocket-family"
requires-python = ">=3.11"

# Dependencies for the Celery worker. The broker defaults to Redis (local dev)
# but kombu[sqs] enables the sqs:// transport for AWS deployments without any
# code changes — only BROKER_URL needs to change in the environment.
dependencies = [
    "celery==5.4.0",
    "kombu[sqs]>=5.3.0",
    "redis==5.1.1",
    "sqlalchemy==2.0.35",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "python-dateutil>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[tool.uv]
dev-dependencies = []
